--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -66,6 +66,9 @@
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.GuardRrail">GuardRail (Pricing Tool/SAP)</a>
                                 </li>
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.overlap">Overlap (Pricing Tool/SAP)</a>
+                                </li>
 								
                                     </ul>
                                 </li>
