--- a/app/partials/Personal/MasterDataMaterial.html
+++ b/app/partials/Personal/MasterDataMaterial.html
@@ -126,6 +126,13 @@
                                     <th data-hide="phone,tablet" >
                                         MATNR
                                     </th>
+									<th data-hide="phone">
+                                        Cause
+                                    </th>
+									<th data-hide="phone">
+                                        Error Details
+                                    </th>
+									
                                     <th data-hide="phone">
                                         Status
                                     </th>
@@ -139,7 +146,11 @@
 									<td>{{ x.Entry3 == "/CCEJ/MATMAS" ? "Material" : x.Entry3 }}</td>
 									<td>{{ x.Entry1 }}</td>
 									<td>{{ x.Entry4 }}</td>
+									
 									<td><span ng-class="{1 : 'label label-danger', 0 : 'label label-success' } [x.Entry5] " >{{ x.Entry5 == 1 ? "Not Synced" : "Synced" }}</span></td>
+									<td>{{ x.Entry6 }}</td>
+									<td>{{ x.Entry7 }}</td>
+									
                                 </tr>
 												<tr >
 													<td ng-show="mdRecordsArray.length == 0" colspan="20" style="text-align:center">
