--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -66,11 +66,15 @@
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.GuardRrail">GuardRail (Pricing Tool/SAP)</a>
                                 </li>
-								<!--
+								
 								<li ui-sref-active="active">
-                                    <a ui-sref="app.tables.overlap">Overlap (Pricing Tool/SAP)</a>
+                                    <a ui-sref="app.tables.overlap">Emergency (Pricing Tool/SAP)</a>
                                 </li>
-								-->
+								
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.EmergencyOverlap">Emergency Overlap (Pricing Tool/SAP)</a>
+                                </li>
+								
                                     </ul>
                                 </li>
 								
