--- a/app/partials/Personal/CustomerMD.html
+++ b/app/partials/Personal/CustomerMD.html
@@ -123,9 +123,17 @@
                                     <th data-hide="phone,tablet" >
                                         Customer Number
                                     </th>
-                                    <th data-hide="phone">
+									<th data-hide="phone">
                                         Status
                                     </th>
+									<th >
+                                        Cause
+                                    </th>
+									<th  >
+                                        Error Details
+                                    </th>
+									
+                                    
                                 </tr>
                             </thead>
                             <tbody>
@@ -134,6 +142,8 @@
 									<td>{{ x.Entry3 == "/CCEJ/DEBMAS_FULL" ? "Customer" : x.Entry3 }}</td> 
 									<td>{{ x.Entry1 }}</td>
 									<td>{{ x.Entry4 }}</td>
+									<td>{{ x.Entry6 }}</td>
+									<td>{{ x.Entry7 }}</td>
 									<td><span ng-class="{1 : 'label label-danger', 0 : 'label label-success' } [x.Entry5] " >{{ x.Entry5 == 1 ? "Not Synced" : "Synced" }}</span></td>
                                 </tr>
 								<tr >
