--- a/app/partials/Personal/SalesOderTable.html
+++ b/app/partials/Personal/SalesOderTable.html
@@ -13,26 +13,20 @@
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         
-						
-						<div style="width:10%" class="input-group" >
-
+						<div class="col-md-6 col-sm-6 col-xs-6">
+						<b>Start Date</b>
+						<div style="width:50%;float: right" class="input-group" >
 								<input type="text" class="form-control datepicker" max-date="maxDate" datepicker-popup="yyyy/MM/dd" ng-model="CreationStartDate" is-open="dtpick.opened"  ng-required="true" close-text="Close" ng-click="open($event,'opened')" 
 								ng-change="changeDate()" />
 								<span class="input-group-addon" ng-click="open($event,'opened')">
 									<i class="fa fa-calendar" style="color: #999;"/>
 								</span>
 						</div>
-							
-							
-						
-						 
-						 
-						 <b>Start Date</b> <input type="date" ng-model="CreationStartDate" style="height:25px" />&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;
-						 <b>End Date</b> <input type="date" ng-model="CreationEndDate" style="height:25px" />&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;
-						 
-						 
-						 
-						<div style="width:10%" class="input-group" >
+						</div>
+
+						<div class="col-md-6 col-sm-6 col-xs-6">
+						<b style="float: right">End Date</b>
+						<div style="width:50%" class="input-group" >
 
 								<input type="text" class="form-control datepicker" max-date="maxDate" datepicker-popup="yyyy/MM/dd" ng-model="CreationEndDate" is-open="dtpick.opened2"  ng-required="true" close-text="Close" ng-click="open($event,'opened2')" 
 								ng-change="changeDate()" />
@@ -40,15 +34,97 @@
 									<i class="fa fa-calendar" style="color: #999;"/>
 								</span>
 						</div>
+						</div>
+							
+						
+						 
+						 <!--
+						 <b>Start Date</b> <input type="date" ng-model="CreationStartDate" style="height:25px" />&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;
+						 <b>End Date</b> <input type="date" ng-model="CreationEndDate" style="height:25px" />&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;
+						 -->
+						 
+						
+						
   		
   		<!-- <md-datepicker ng-model="DeliveryDate" md-placeholder="Enter date"></md-datepicker> -->
   		 &nbsp;  &nbsp;
-  		<button class="btn btn-primary btn-sm" ng-click="postMessage()"   >Call Web Service</button>
+		 <div class="text-center">
+  		<button class="btn btn-primary btn-sm " ng-click="postMessage()"   >Check Result</button>
+		</div>
 		<div class="clearfix"></div>
 		<div class="clearfix"></div>
 		<br>
   		<br>
+		<div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
+		<table class="table table-striped table-bordered" data-filter="#filter" class="table table-striped">
+			<thead>
+				<tr>
+				 <td><b>System</b></td>
+					<td><b>Date</b></td>
+					
+					<td><b>00-04</b></td>
+					<td><b>05</b></td>
+					<td><b>06</b></td>
+					<td><b>07</b></td>
+					<td><b>08</b></td>
+					<td><b>09</b></td>
+					<td><b>10</b></td>
+					<td><b>11</b></td>
+					<td><b>12</b></td>
+					<td><b>13</b></td>
+					<td><b>14</b></td>
+					<td><b>15</b></td>
+					<td><b>16</b></td>
+					<td><b>17</b></td>
+					<td><b>18</b></td>
+					<td><b>19</b></td>
+					<td><b>20</b></td>
+					<td><b>21</b></td>
+					<td><b>22</b></td>
+					<td><b>23</b></td>
+					<td><b>Total</b></td>
+				</tr>
+				</thead>
+				<tbody>
+                                <tr dir-paginate="x in salesOrderArray | itemsPerPage:10 " >                         
+									<td>{{ x[0] }}</td>
+									<td>{{ x[1] }}</td>
+									<td>{{x[2]}}</td>
+									<td>{{x[3]}}</td>
+									<td>{{x[4]}}</td>
+									<td>{{x[5]}}</td>
+									<td>{{x[6]}}</td>
+									<td>{{x[7]}}</td>
+									<td>{{x[8]}}</td>
+									<td>{{x[9]}}</td>
+									<td>{{x[10]}}</td>
+									<td>{{x[11]}}</td>
+									<td>{{x[12]}}</td>
+									<td>{{x[13]}}</td>
+									<td>{{x[14]}}</td>
+									<td>{{x[15]}}</td>
+									<td>{{x[16]}}</td>
+									<td>{{x[17]}}</td>
+									<td>{{x[18]}}</td>
+									<td>{{x[19]}}</td>
+									<td>{{x[20]}}</td>
+									<td>{{x[21]}}</td>
+									<td>{{x[22]}}</td>
+								</tr>
+								
+												<tr>
+													<td ng-show="salesOrderArray.length == 0" colspan="30" style="text-align:center">
+														   No Data             
+													</td>
+												</tr>
+                                
+                            </tbody>
+				
+				</table>
+		</div>
 		
+		
+		<!--
 		<table class="table table-bordered table-striped" >
   		<tr>
   		<td><b>System</b></td>
@@ -77,7 +153,7 @@
     	<td><b>Total</b></td>
     	
   		</tr>
-  		<tr ng-repeat="x in salesOrderArray   " > <!--  | filter:{Var1: idocNumber } | filter: (syncResultBool === true ? filter2 : '')  | groupBy: 'Var1'   / filter: filter2 -->
+  		<tr ng-repeat="x in salesOrderArray   " > <!--  | filter:{Var1: idocNumber } | filter: (syncResultBool === true ? filter2 : '')  | groupBy: 'Var1'   / filter: filter2 
     		
     	<td>{{ x[0] }}</td>
     	<td>{{ x[1] }}</td>
@@ -106,9 +182,16 @@
 
   		</tr>
   		</table>
-		
+		-->
                     </div>
-                </div>
+                
+				
+				<div class="col-md-10 col-sm-12 col-xs-12 col-md-offset-1" ng-show="showChart">
+                        <canvas id="tables" class="chart chart-line" chart-data="data" chart-labels="labels" chart-colours="colours"chart-options="optionsChart" chart-legend="true" chart-series="seriesChart" ></canvas>
+                        
+                        
+                    </div>
+				
             </div>
 			
 			
