Customer Additional fix (Pending)

--- a/app/partials/Personal/MasterDataMaterial.html
+++ b/app/partials/Personal/MasterDataMaterial.html
@@ -14,7 +14,7 @@
                 </div>
             </header>
             <div class="content-body padding-bottom-0">
-                <div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
+					<div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
                         <div class="tile-counter bg-primary">
                             <div class="content">
                                 <i class='fa fa-laptop icon-lg'></i>
@@ -69,18 +69,18 @@
 						<tbody>
 							<tr>
 							<td>All idocs</td>
-							<td>{{countAll}}</td>
+							<td>{{countAll}} </td>
 							</tr>
 							<tr>
-							<td>Synced</td>
+							<td><i class='fa fa-check-circle icon-success'></i> Synced</td>
 							<td>{{countSynced}}</td>
 							</tr>
 							<tr>
-							<td>Not Synced</td>
+							<td><i class='fa fa-exclamation-circle icon-danger'></i> Not Synced</td>
 							<td>{{countNotSynced}}</td>
 							</tr>
 							<tr>
-							<td>Pending</td>
+							<td><i class='fa fa-exclamation-triangle icon-warning'> </i> Pending</td>
 							<td>{{countPending}}</td>
 							</tr>		
 						</table>
