--- a/app/partials/Personal/CustomerMD.html
+++ b/app/partials/Personal/CustomerMD.html
@@ -14,7 +14,7 @@
                 </div>
             </header>
             <div class="content-body padding-bottom-0">
-                <div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
+                <div class="col-lg-3 col-md-3 col-xs-12 col-sm-6">
                         <div class="tile-counter bg-primary">
                             <div class="content">
                                 <i class='fa fa-laptop icon-lg'></i>
@@ -25,7 +25,7 @@
                         </div>
                     </div>
 					
-                    <div   class="col-lg-15 col-md-4 col-xs-2 col-sm-6">
+                    <div   class="col-lg-3 col-md-3 col-xs-2 col-sm-6">
                         <div  ng-class="{ true : 'tile-counter bg-primary' , false : 'tile-counter bg-danger' } [ExpectedRecords==insertedRow] ">
                             <div class="content">
                                 <i class='fa fa-database icon-lg'></i>
@@ -36,7 +36,7 @@
                         </div>
                     </div>
 					
-					<div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
+					<div class="col-lg-3 col-md-3 col-xs-12 col-sm-6">
 					
 					<div style="text-align:-webkit-center">
                                 <div class="chart" ui-jq="easyPieChart" ui-options="{
@@ -59,8 +59,36 @@
                     </div>    
 						
 					
-                    <div class="col-lg-6 col-xs-12 col-sm-12 col-md-6">         
-                            </div>
+                    <div class="col-lg-3 col-md-3 col-xs-12 col-sm-6">
+					<table class="table table-striped">
+						<thead>
+							<tr>
+							<th>Status</th>
+							<th>Count</th>
+							</tr>
+						</thead>								
+						<tbody>
+							<tr>
+							<td>All idocs</td>
+							<td>{{countAll}} </td>
+							</tr>
+							<tr>
+							<td><i class='fa fa-check-circle icon-success'></i> Synced</td>							
+							<td>{{countSynced}}</td>
+							</tr>
+							<tr>
+							<td><i class='fa fa-exclamation-circle icon-danger'></i> Not Synced</td>							
+							<td>{{countNotSynced}}</td>
+							</tr>
+							<tr>
+							<td><i class='fa fa-exclamation-triangle icon-warning'></i> Pending</td>
+							<td>{{countPending}}</td>
+							</tr>		
+					</table>
+						
+						
+						
+					</div>
 					
                     <div class="clearfix"></div>
                     
@@ -88,19 +116,21 @@
 			<div class="content-body padding-bottom-0">
                 <div class="row">
 				
-                    <div class="col-md-9 col-sm-12 col-xs-12">
+                    <div class="col-md-8 col-sm-12 col-xs-12">
                         <input id="filter" type="text" class="form-control" placeholder="Search" ng-model="filterText"  />
 						
 						<!-- <input type="text" ng-model="search" class="form-control" placeholder="Search"> -->
 						
 					</div>
 					
+					 <div class="col-md-4 col-sm-12 col-xs-12">
 					<div class="btn-group margin-bottom-10 margin-right-15">
                        <label class="btn btn-primary" ng-click="FilterAll()" >All</label>
                        <label class="btn btn-success" ng-click="FilterOnlySynced()"  >Synced</label>
                        <label class="btn btn-danger" ng-click="FilterOnlyNotSynced()" >Not Synced</label>
+					   <label class="btn btn-warning" ng-click="FilterOnlyBoomiPending()" >Pending</label>
                     </div>
-                    
+                    </div>
 					
                     <div class="clearfix"></div>
 					<br>
@@ -117,13 +147,13 @@
                                     <th>
                                         Type
                                     </th>
-                                    <th data-hide="phone,tablet">
+                                    <th >
                                         Date
                                     </th>
-                                    <th data-hide="phone,tablet" >
+                                    <th  >
                                         Customer Number
                                     </th>
-									<th data-hide="phone">
+									<th >
                                         Status
                                     </th>
 									<th >
@@ -144,7 +174,9 @@
 									<td>{{ x.Entry4 }}</td>
 									<td>{{ x.Entry6 }}</td>
 									<td>{{ x.Entry7 }}</td>
-									<td><span ng-class="{1 : 'label label-danger', 0 : 'label label-success' } [x.Entry5] " >{{ x.Entry5 == 1 ? "Not Synced" : "Synced" }}</span></td>
+									<td><span ng-class="{1 : 'label label-danger', 0 : 'label label-success' } [x.Entry5] " >{{ x.Entry5 == 1 ? "Not Synced" :
+									x.Entry5 == 0 ? "synced" :
+								    "Pending in Boomi" }}</span></td>
                                 </tr>
 								<tr >
 													<td ng-show="mdRecordsArray.length == 0" colspan="20" style="text-align:center">
